Updated compilation logic for Python and CPP